--- a/mon_app/templates/liste_restaurants.html
+++ b/mon_app/templates/liste_restaurants.html
@@ -48,30 +48,30 @@ function getCookie(name) {
 }
 
 // Récupérer le jeton CSRF
-const csrftoken = getCookie('csrftoken');
+// const csrftoken = getCookie('csrftoken');
 
-// Vérifier si csrftoken est défini
-if (csrftoken) {
-  // Effectuer votre appel fetch ici avec csrftoken
-  fetch('/ajouter_donnees', {
-    method: 'POST',
-    headers: {
-      'Content-Type': 'application/json',
-      'X-CSRFToken': csrftoken
-    },
-    body: JSON.stringify({ latitude: latitude, longitude: longitude })
-  })
-    .then(response => response.json())
-    .then(data => {
-      console.log('Success:', data);
-    })
-    .catch((error) => {
-      console.error('Error:', error);
-      console.log('ici');
-    });
-} else {
-  console.error('Le jeton CSRF n\'est pas défini.');
-}
+// // Vérifier si csrftoken est défini
+// if (csrftoken) {
+//   // Effectuer votre appel fetch ici avec csrftoken
+//   fetch('/ajouter_donnees', {
+//     method: 'POST',
+//     headers: {
+//       'Content-Type': 'application/json',
+//       'X-CSRFToken': csrftoken
+//     },
+//     body: JSON.stringify({ latitude: latitude, longitude: longitude })
+//   })
+//     .then(response => response.json())
+//     .then(data => {
+//       console.log('Success:', data);
+//     })
+//     .catch((error) => {
+//       console.error('Error:', error);
+//       console.log('ici');
+//     });
+// } else {
+//   console.error('Le jeton CSRF n\'est pas défini.');
+// }
 
 // Déclarer les variables en dehors du bloc if
 var latitude;
@@ -85,22 +85,22 @@ if ("geolocation" in navigator) {
     console.log("coordonnées : ", latitude, longitude);
 
     // Envoyer la position au serveur Django
-    fetch('/ajouter_donnees', {
-      method: 'POST',
-      headers: {
-        'Content-Type': 'application/json',
-        'X-CSRFToken': csrftoken // Assurez-vous d'inclure le token CSRF
-      },
-      body: JSON.stringify({ latitude: latitude, longitude: longitude })
-    })
-      .then(response => response.json())
-      .then(data => {
-        console.log('Success:', data);
-      })
-      .catch((error) => {
-        console.error('Error:', error);
-        console.log('ici');
-      });
+    // fetch('/ajouter_donnees', {
+    //   method: 'POST',
+    //   headers: {
+    //     'Content-Type': 'application/json',
+    //     'X-CSRFToken': csrftoken // Assurez-vous d'inclure le token CSRF
+    //   },
+    //   body: JSON.stringify({ latitude: latitude, longitude: longitude })
+    // })
+    //   .then(response => response.json())
+    //   .then(data => {
+    //     console.log('Success:', data);
+    //   })
+    //   .catch((error) => {
+    //     console.error('Error:', error);
+    //     console.log('ici');
+    //   });
   }, function(error) {
     console.warn(`ERROR(${error.code}): ${error.message}`);
   }, {
